@@ -9,11 +9,7 @@ kawa.txt:  $(srcdir)/kawa.texi version.texi
              -e '/Making info file /,/END-INFO-DIR-ENTRY/d' \
           >$@
 
-# HTML files automatically generated by texi2html from kawa.texi:
-KAWA_HTML_PARTS = kawa_1.html kawa_2.html kawa_3.html kawa_4.html \
-	kawa_5.html kawa_6.html kawa_7.html kawa_8.html kawa_9.html \
-	kawa_10.html kawa_11.html
-KAWA_HTMLS = kawa_toc.html $(KAWA_HTML_PARTS)
+KAWA_HTMLS = kawa/index.html
 $(KAWA_HTMLS):  $(srcdir)/kawa.texi version.texi
 	$(MAKEINFO) -I$(srcdir) --html $<
 #	texi2html -menu -split_chapter $<
@@ -31,8 +27,11 @@ kawa.1: $(srcdir)/kawa.man
 	nroff -man $(srcdir)/kawa.man | col -b > kawa1.tmp
 	mv kawa1.tmp kawa.1
 
-EXTRA_DIST = kawa.txt $(KAWA_HTMLS) scm2java.html kawa.man \
-  kawa-tour.tex kawa-tour.ps Compliance.html mdate-sh
+../kawa-doc-$(VERSION).tar.gz: kawa/index.html internals.html kawa-tour.ps
+	tar cf - kawa/*.html internals.html kawa-tour.ps|gzip -c --best >$@
+
+EXTRA_DIST = kawa.txt html scm2java.html kawa.man \
+  kawa-tour.tex mdate-sh
 info_TEXINFOS = kawa.texi kawa-tour.texi
 CLEANFILES = kawa.txt *.info kawa_toc.html $(KAWA_HTMLS) kawa1.tmp kawa.1
 
@@ -46,14 +45,10 @@ install-html:
 	sed -e 's|HREF="kawa_|HREF="kawa/kawa_|g' -e 's|HREF="../|HREF="|g' \
 		<kawa_toc.html >$(HTML_HOME)/kawa.html
 
-XSL_CLASSPATH = /home/bothner/Java/xalan_1_0_0/xalan.jar:/home/bothner/Java/xalan_1_0_0/xerces.jar:$$CLASSPATH
-XSL = $(JAVA) org.apache.xalan.xslt.Process
+XSLT = xsltproc
 
 internals.html: $(srcdir)/internals.xml
-	CLASSPATH=$(XSL_CLASSPATH) \
-	$(XSL) -IN $(srcdir)/internals.xml \
-	  -XSL /home/bothner/sgml/docbook/html/docbook.xsl \
-	  -OUT internals.html
+	$(XSLT) /opt/docbook-xsl/html/docbook.xsl $< > $@
 
 TransformToLatex.class:
 	ln -s /home/bothner/public_html/papers/Freenix00/TransformToLatex.class .
